    * In function InstlAdmin.should_wtar, regex self.already_wtarred_regex was change to search instead of match.
    * New function InstlAdmin.compile_exclude_regexes to consolidate the reading of FOLDER_EXCLUDE_REGEX & FILE_EXCLUDE_REGEX in one place.
    * New propery SVNItem.size, implemented with member __size.

    user visible changes, client:
    * New interactive command which prints the path to currently running instl
    * During copy, on Mac OS, rsync will set permissions according to variable RSYNC_PERM_OPTIONS.  Default value is --perms --chmod=a+rw,+X.
    * Var assignments and remarks for DOS batch files will escape the '&' character.



31/5/2015 0.10.0.6

    programmer visible changes:
    * Replaced default value path_so_far=list() with path_so_far=None
    * fixed wrong parameter name on CopyTool_win_xcopy.copy_dir_files_to_dir
    * Moved the curl config folder to be created in the bookkeeping folder so curls files for two version
        will not step on each other.
    * Better ConnectionHTTP.translate_url acts only on the path part.
    * DownloadToolBase.add_download_url in InstlInstanceSync_url.create_download_instructions_for_item: translate_url applied only to URLs created by instl.
    * Reading of info map file checks only checksum not sig.
    * Case insensitive checksum checks.
    * Checks with multi regexes are combined with new function compile_regex_list_ORed, used in conjuction with followingparams:
        FOLDER_WTAR_REGEX, FILE_WTAR_REGEX, FOLDER_EXCLUDE_REGEX, FILE_EXCLUDE_REGEX.
    * Fixed some errors discovered by Landscape.io
    * New function PlatformSpecificHelperBase.unwtar_something for unwtarring a specific item not just the current directory.
        PlatformSpecificHelperBase.unwtar_current_folder is now implemented by calling PlatformSpecificHelperBase.unwtar_something(".")

    user visible changes, client:
    * check-checksum command was defined by mistake to require --out command line option. Now removed.